Fix descriptions items alignment on mobile

--- a/source/assets/stylesheets/modules/_description.scss
+++ b/source/assets/stylesheets/modules/_description.scss
@@ -1,5 +1,6 @@
 .Description {
   display: flex;
+  align-items: center;
   flex-direction: column;
   max-width: $medium-width;
   margin-bottom: 3em;
